--- a/pages/nature.html
+++ b/pages/nature.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- TODO: add the path to connect the scripts.js file -->
-    <script src="" defer></script>
+    <script src="../js/scripts.js" defer></script>
 
     <!-- TODO: add relative path to connect the layout.css file -->
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="../css/layout.css" />
 
     <!-- TODO: add relative path to connect the image-detail.css file -->
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="../css/secondary/image-detail.css" />
 
     <!-- Google custom fonts connection, don't edit these lines -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
