--- a/pages/modern-design.html
+++ b/pages/modern-design.html
@@ -64,13 +64,13 @@
           lifestyle and discover the beauty in simplicity.
         </p>
         <!-- TODO: add absolute path to the unsplash "modern design" collection page from README.md -->
-        <a class="more-images" href="">More Modern Design Images</a>
+        <a class="more-images" href="https://unsplash.com/s/photos/modern-design">More Modern Design Images</a>
         <div class="detail-navigation">
           <!-- TODO: add relative path to space.html file -->
-          <a href="" class="nav-button">&#8656;&nbsp;&nbsp;Prev: Space</a>
+          <a href="../pages/space.html" class="nav-button">&#8656;&nbsp;&nbsp;Prev: Space</a>
 
           <!-- TODO: add relative path to plants.html file -->
-          <a href="" class="nav-button">Next: Plants &nbsp;&nbsp;&#8658;</a>
+          <a href="../pages/plants.html" class="nav-button">Next: Plants &nbsp;&nbsp;&#8658;</a>
         </div>
       </section>
     </main>
